[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Boss/Dragon.png" type="Texture" id=1]
[ext_resource path="res://Objects/Boss/Baddies.gd" type="Script" id=3]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox and Hurtbox/Hitbox/Hitbox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7.1206 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7.07207 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7.13624 )

[node name="Boss" type="StaticBody2D"]
scale = Vector2( 4.89798, 4.89798 )
collision_layer = 0
collision_mask = 40
script = ExtResource( 3 )
hp = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.04166 )
scale = Vector2( 0.739637, 0.745243 )
shape = SubResource( 1 )

[node name="Boss" type="Sprite" parent="."]
scale = Vector2( 0.00627783, 0.00627783 )
texture = ExtResource( 1 )
flip_h = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
scale = Vector2( 0.744712, 0.744712 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 2 )
scale = Vector2( 0.738016, 0.738016 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Node2D" type="Node2D" parent="."]

[node name="Aim1" type="Position2D" parent="Node2D"]
position = Vector2( -10, -7 )

[node name="Aim2" type="Position2D" parent="Node2D"]
position = Vector2( -11, 0 )

[node name="Aim3" type="Position2D" parent="Node2D"]
position = Vector2( -10, 10 )

[node name="Aim9" type="Position2D" parent="Node2D"]
position = Vector2( -12.0458, -4.69581 )

[node name="Aim10" type="Position2D" parent="Node2D"]
position = Vector2( -12.0458, 3.87915 )

[node name="Aim11" type="Position2D" parent="Node2D"]
position = Vector2( -13.6791, -2.24582 )

[node name="Aim12" type="Position2D" parent="Node2D"]
position = Vector2( -13.6791, 5.71664 )

[node name="Aim13" type="Position2D" parent="Node2D"]
position = Vector2( -12.0458, 8.16663 )

[node name="Aim14" type="Position2D" parent="Node2D"]
position = Vector2( -16.1291, 1.42916 )

[node name="Aim15" type="Position2D" parent="Node2D"]
position = Vector2( -17.5583, 0 )

[node name="Aim16" type="Position2D" parent="Node2D"]
position = Vector2( -17.7624, -3.87915 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
